
0.26 Fri May 14 11:37:37 EDT 2010
    - Making the dbh method in Chado.pm create a db handle if one doesn't
      already exist (it is not clear to me how this happens, since the
      constructor for Chado.pm is supposed to create it, but whatever).
    - Silenced uninit squawks when gbrowse_details page is rendered

0.3 Fri Jun 25 09:32:01 EDT 2010
    - Added documentation for the Chado constructor
    - Changed the class method so that it always returns 'Sequence', which is
      really the right thing for it to do: class only makes sense in the
      context of Bio::DB::GFF.
    - Added a -fulltext option for using full text searching in postgres 8.4
      or better.  See perldoc Bio::DB::Das::Chado and gmod_chado_fts_prep.pl
      for more info, as well as the web page on the GMOD wiki: 
      http://gmod.org/wiki/Chado_Full_Text_Search 
    - Added feature_summary and coverage_array methods to Chado.pm to support
      the feature summary functionality of GBrowse2; see the GMOD wiki page
      describing this feature: http://gmod.org/wiki/Chado_gbrowse_summary_view

0.31 Tue Apr  5 12:32:31 EDT 2011
    - Added gmod_chado_fts_prep.pl and gmod_create_summary_statistics.pl to
      the MANIFEST.
    - Improved how the interval stats table data get generated.
    - Added support for the primary_seq method to the Segment object.
    - Added support for using srcfeatureslice in command line instances.
    - Improved GFF and other dump formats from GBrowse (though they are still
      probably less than perfect).
    
0.32 Thu Jun 23 16:08:33 EDT 2011
    - Fixed a bug that caused the density plot to fail when in the summary
      view when the source of the feature isn't provided in the track def.

0.33 Thu Oct 20 10:52:55 EDT 2011
    - Added rudimentary support for non-public schemas (mostly for Tripal).
    - Fixed a bug that caused all features to show up when only features
      for one seq_id was requested and srcfeatureslice isn't set.