@@ -11,3 +11,4 @@ META.yml
 README
 t/001_load.t
 Todo
+META.json
