@@ -1,9 +1,12 @@
 ---
 abstract: 'DAS-style access to a chado database'
-author: []
+author:
+  - unknown
+build_requires: {}
 configure_requires:
-  Module::Build: 0.36
-generated_by: 'Module::Build version 0.3607'
+  Module::Build: 0.38
+dynamic_config: 1
+generated_by: 'Module::Build version 0.38, CPAN::Meta::Converter version 2.110930'
 license: perl
 meta-spec:
   url: http://module-build.sourceforge.net/META-spec-v1.4.html
@@ -12,15 +15,18 @@ name: Bio-DB-Das-Chado
 provides:
   Bio::DB::Das::Chado:
     file: lib/Bio/DB/Das/Chado.pm
-    version: 0.31
+    version: 0.33
   Bio::DB::Das::Chado::Segment:
     file: lib/Bio/DB/Das/Chado/Segment.pm
-    version: 0.31
+    version: 0.33
   Bio::DB::Das::Chado::Segment::Feature:
     file: lib/Bio/DB/Das/Chado/Segment/Feature.pm
-    version: 0.31
+    version: 0.33
   Bio::DB::Das::ChadoIterator:
     file: lib/Bio/DB/Das/Chado.pm
+    version: 0
+recommends:
+  Bio::GMOD::DB::Config: 1.22
 requires:
   Bio::Root::Version: 1.006
   DBD::Pg: 0
@@ -28,4 +34,4 @@ requires:
   URI::Escape: 0
 resources:
   license: http://dev.perl.org/licenses/
-version: 0.31
+version: 0.33
