@@ -64,9 +64,9 @@ track the bugs and their resolution.
   http://sourceforge.net/tracker/?group_id=27707&atid=391291
 
 
-=head1 AUTHOR - Scott Cain 
+=head1 AUTHOR
 
-Email scain@cpan.org
+Scott Cain <scain@cpan.org>
 
 =head1 LICENSE
 
